--- a/public/main.css
+++ b/public/main.css
@@ -23,7 +23,8 @@ html {
   --primary-200: #99b5b4;
   --primary-300: #66908e;
   --primary-400: #336b69;
-  --primary-500: #004643;
+  --primary-500: #41532f;
+  /* --primary-500: #004643; */
   --primary-600: #003836;
   --primary-700: #002a28;
   --primary-800: #001c1b;
@@ -385,8 +386,9 @@ ul {
   gap: 0.5rem;
   margin: 0;
   font-weight: 700;
+  line-height: 1.3;
   border-top: none;
-  color: var(--btn-primary);
+  color: var(--secondary-500);
 }
 
 @media screen and (min-width: 992px) {
@@ -444,19 +446,25 @@ ul {
   }
 
   .nav-link:hover {
-    color: var(--btn-primary);
+    color: var(--secondary-700);
   }
 
   .social-icons {
     display: flex;
   }
+
   .social-icons a {
     margin: 0 0.5rem;
-    color: var(--btn-primary);
+    color: var(--secondary-500);
+  }
+
+  .social-icons i {
     transition: var(--transition);
   }
-  .social-icons a:hover {
-    color: var(--ternary);
+
+  .social-icons i:hover {
+    color: var(--secondary-700);
+    transform: scale(1.25);
   }
 }
 
@@ -492,10 +500,9 @@ ul {
 
 .hero {
   height: 40vh;
-  background: url('../assets/images/photo-1532712938310-34cb3982ef74.avif')
+  background: url('../assets/images/photo-1454165804606-c3d57bc86b40.avif')
     center/cover no-repeat;
-  background-position: 50% 100%;
-  border-radius: var(--borderRadius);
+  background-position: 30% 15%;
   margin-bottom: 2rem;
   position: relative;
 }
@@ -506,7 +513,7 @@ ul {
   height: 100%;
   top: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.45);
+  background: rgba(0, 0, 0, 0.35);
   border-radius: var(--borderRadius);
   display: flex;
   align-items: flex-start;
@@ -532,10 +539,35 @@ ul {
   font-weight: 700;
 }
 
+@media (min-width: 667px) and (orientation: landscape) {
+  .hero-text h1 {
+    margin-top: 3rem;
+  }
+}
+
+@media (min-width: 1024px) and (orientation: landscape) {
+  .hero-text h1 {
+    margin-top: 7rem;
+  }
+}
+
+@media (min-width: 1366px) and (orientation: landscape) {
+  .hero-text h1 {
+    margin-top: 10rem;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .hero-text h1 {
+    margin-top: 5rem;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .hero-text h1 {
     font-size: 2.986rem;
   }
+
   .hero-text,
   .text-small {
     width: 80vw;
@@ -547,6 +579,7 @@ ul {
   .text-small {
     width: 30ch;
   }
+
   .claim {
     display: block;
     line-height: 0.75;
@@ -772,6 +805,7 @@ ul {
 
 .galeria-container {
   /* width: 80vw; */
+  position: relative;
   display: grid; /*one column layour*/
   place-items: center;
   gap: 0.375rem 1rem;
@@ -782,6 +816,39 @@ ul {
   height: 18rem;
   border-radius: var(--borderRadius);
   box-shadow: var(--shadow-2);
+}
+
+/* modal */
+
+.relative {
+  position: relative;
+  width: 100%;
+  transition: var(--transition);
+}
+
+.relative:hover {
+  /* filter: contrast(0.5); */
+  transform: scale(1.05);
+}
+
+.modal-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: var(--transition);
+}
+
+.modal-overlay:hover {
+  cursor: pointer;
+  background: rgba(124, 124, 124, 0.45);
+  opacity: 1;
+  z-index: 1;
 }
 
 @media screen and (max-width: 375px) {
