--- a/public/main.css
+++ b/public/main.css
@@ -539,7 +539,7 @@ ul {
   font-weight: 700;
 }
 
-@media (min-width: 667px) and (orientation: landscape) {
+/* @media (min-width: 667px) and (orientation: landscape) {
   .hero-text h1 {
     margin-top: 3rem;
   }
@@ -555,11 +555,17 @@ ul {
   .hero-text h1 {
     margin-top: 10rem;
   }
+} */
+
+@media (orientation: landscape) {
+  .hero-text h1 {
+    margin-top: 3rem;
+  }
 }
 
 @media screen and (max-width: 375px) {
   .hero-text h1 {
-    margin-top: 4rem;
+    margin-top: 5rem;
   }
 }
 
