--- a/public/main.css
+++ b/public/main.css
@@ -557,26 +557,21 @@ ul {
   }
 } */
 
-@media (orientation: landscape) {
+@media screen and (min-width: 667px) and (orientation: landscape) {
   .hero-text h1 {
     margin-top: 3rem;
+  }
+}
+
+@media screen and (min-width: 1024px) and (orientation: landscape) {
+  .hero-text h1 {
+    margin-top: 7rem;
   }
 }
 
 @media screen and (max-width: 375px) {
   .hero-text h1 {
     margin-top: 5rem;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .hero-text h1 {
-    font-size: 2.986rem;
-  }
-
-  .hero-text,
-  .text-small {
-    width: 80vw;
   }
 }
 
@@ -589,6 +584,17 @@ ul {
   .claim {
     display: block;
     line-height: 0.75;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero-text h1 {
+    font-size: 2.986rem;
+  }
+
+  .hero-text,
+  .text-small {
+    width: 80vw;
   }
 }
 
