--- a/public/main.css
+++ b/public/main.css
@@ -116,7 +116,7 @@ h6 {
   margin: 0;
   margin-bottom: 1.38rem;
   font-family: var(--headingFont);
-  font-weight: 00;
+  font-weight: 700;
   line-height: 1.15;
   letter-spacing: var(--letterSpacing);
   text-transform: capitalize;
@@ -571,7 +571,8 @@ ul {
 
 @media screen and (max-width: 375px) {
   .hero-text h1 {
-    margin-top: 5rem;
+    margin-top: 3rem;
+    padding: 0;
   }
 }
 
