--- a/public/main.css
+++ b/public/main.css
@@ -516,14 +516,13 @@ ul {
   background: rgba(0, 0, 0, 0.35);
   border-radius: var(--borderRadius);
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
 }
 
 .hero-text h1 {
   font-size: 2.074rem;
   margin: 0;
-  margin-top: 8rem;
 }
 
 .hero-text,
@@ -537,55 +536,6 @@ ul {
 .claim {
   color: var(--btn-primary);
   font-weight: 700;
-}
-
-/* @media (min-width: 667px) and (orientation: landscape) {
-  .hero-text h1 {
-    margin-top: 3rem;
-  }
-}
-
-@media (min-width: 1024px) and (orientation: landscape) {
-  .hero-text h1 {
-    margin-top: 7rem;
-  }
-}
-
-@media (min-width: 1366px) and (orientation: landscape) {
-  .hero-text h1 {
-    margin-top: 10rem;
-  }
-} */
-
-@media screen and (min-width: 667px) and (orientation: landscape) {
-  .hero-text h1 {
-    margin-top: 3rem;
-  }
-}
-
-@media screen and (min-width: 1024px) and (orientation: landscape) {
-  .hero-text h1 {
-    margin-top: 7rem;
-  }
-}
-
-@media screen and (max-width: 375px) {
-  .hero-text h1 {
-    margin-top: 3rem;
-    padding: 0;
-  }
-}
-
-@media screen and (max-width: 420px) {
-  .hero-text,
-  .text-small {
-    width: 30ch;
-  }
-
-  .claim {
-    display: block;
-    line-height: 0.75;
-  }
 }
 
 @media screen and (min-width: 768px) {
