--- a/public/main.css
+++ b/public/main.css
@@ -840,6 +840,29 @@ ul {
   z-index: 1;
 }
 
+.open-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0 0 0 / 0.3);
+  display: none;
+  z-index: 1;
+}
+
+.open-container {
+  position: fixed;
+  width: 70vw;
+  height: 80vh;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
+  background: tomato;
+  z-index: 1;
+}
+
 @media screen and (max-width: 375px) {
   .details-container div {
     flex: 0 1 12rem;
