--- a/public/main.css
+++ b/public/main.css
@@ -853,7 +853,7 @@ ul {
 
 .open-container {
   position: fixed;
-  width: 70vw;
+  width: 80vw;
   height: 80vh;
   top: 50%;
   left: 50%;
@@ -862,6 +862,68 @@ ul {
   background: tomato;
   z-index: 1;
 }
+
+/* btn prev/next */
+
+.btn-prev,
+.btn-next {
+  width: 2rem;
+  height: 2rem;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  transition: var(--transition);
+}
+
+.btn-prev:hover,
+.btn-next:hover {
+  background: var(--secondary-700);
+  color: var(--secondary-300);
+}
+
+.btn-prev {
+  left: 25px;
+  border-radius: 50%;
+  border: 0;
+  background: var(--secondary-500);
+  color: var(--primary-500);
+}
+
+.btn-next {
+  right: 25px;
+  border-radius: 50%;
+  border: 0;
+  background: var(--secondary-500);
+  color: var(--primary-500);
+}
+
+@media (max-width: 992px) {
+  .open-container {
+    height: 55vh;
+  }
+}
+
+@media (max-width: 678px) {
+  .open-container {
+    height: 40vh;
+  }
+}
+
+@media (max-width: 525px) {
+  .open-container {
+    height: 25vh;
+  }
+
+  .btn-prev,
+  .btn-next {
+    width: 1.25rem;
+    height: 1.25rem;
+    font-size: 0.75rem;
+  }
+}
+
+/* media queries */
 
 @media screen and (max-width: 375px) {
   .details-container div {
