--- a/public/main.css
+++ b/public/main.css
@@ -898,7 +898,7 @@ ul {
   color: var(--primary-500);
 }
 
-@media (max-width: 992px) {
+/* @media (max-width: 992px) {
   .open-container {
     height: 55vh;
   }
@@ -921,7 +921,7 @@ ul {
     height: 1.25rem;
     font-size: 0.75rem;
   }
-}
+} */
 
 /* media queries */
 
@@ -933,11 +933,28 @@ ul {
   .galeria-container img {
     height: 15rem;
   }
+
+  .open-container {
+    height: 25vh;
+  }
+}
+
+@media screen and (min-width: 376px) {
+  .open-container {
+    height: calc(100% - (40vh + 30vh));
+  }
 }
 
 @media screen and (max-width: 476px) {
   .details-container div {
     flex: 0 1 14rem;
+  }
+
+  .btn-prev,
+  .btn-next {
+    width: 1.25rem;
+    height: 1.25rem;
+    font-size: 0.75rem;
   }
 }
 
@@ -967,8 +984,14 @@ ul {
     grid-template-columns: 1fr 1fr;
     gap: 1rem 1rem;
   }
+
   .galeria-container img {
     height: 15rem;
+  }
+
+  .open-container {
+    height: calc(100% - (20vh + 30vh));
+    /* height: 55vh; */
   }
 }
 
@@ -990,8 +1013,13 @@ ul {
   .galeria-container {
     grid-template-columns: 1fr 1fr 1fr;
   }
+
   .galeria-container img {
     height: 12rem;
+  }
+
+  .open-container {
+    height: calc(100% - 30vh);
   }
 }
 
@@ -1052,6 +1080,10 @@ ul {
     overflow: hidden;
     width: 35rem;
     margin: 0;
+  }
+
+  .open-container {
+    height: 80vh;
   }
 
   /* .details-container div {
