Adjusting the modal

--- a/public/main.css
+++ b/public/main.css
@@ -1097,6 +1097,12 @@ ul {
   }
 }
 
+@media screen and (orientation: landscape) {
+  .open-container {
+    height: 85vh;
+  }
+}
+
 /* form */
 
 .span {
