--- a/public/main.css
+++ b/public/main.css
@@ -866,8 +866,8 @@ ul {
   left: 50%;
   transform: translate(-50%, -50%);
   display: none;
-  background: tomato;
   z-index: 1;
+  border-radius: var(--borderRadius);
 }
 
 .modal-active {
@@ -912,31 +912,6 @@ ul {
   color: var(--primary-500);
 }
 
-/* @media (max-width: 992px) {
-  .open-container {
-    height: 55vh;
-  }
-}
-
-@media (max-width: 678px) {
-  .open-container {
-    height: 40vh;
-  }
-}
-
-@media (max-width: 525px) {
-  .open-container {
-    height: 25vh;
-  }
-
-  .btn-prev,
-  .btn-next {
-    width: 1.25rem;
-    height: 1.25rem;
-    font-size: 0.75rem;
-  }
-} */
-
 /* media queries */
 
 @media screen and (max-width: 375px) {
@@ -955,7 +930,7 @@ ul {
 
 @media screen and (min-width: 376px) {
   .open-container {
-    height: 22.5rem;
+    height: 20rem;
   }
 }
 
@@ -1099,10 +1074,6 @@ ul {
   .open-container {
     height: 80vh;
   }
-
-  /* .details-container div {
-    flex: 0 1 14rem;
-  } */
 }
 
 @media screen and (min-width: 1440px) {
